--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
 				I've worked on projects ranging from
 				full-stack web development to machine learning and artificial intelligence (ML/AI).
 			</p>
+			<p>
+				This fall, I'll be working as a SDE Intern at 
+				<a href="https://www.aboutamazon.com/about-us">Amazon</a>.
+			</p>
 			<!-- fun personal details -->
 			<h2>Personal</h2>
 			<p>
@@ -90,11 +94,12 @@
 				<i>The Rise of Theodore Roosevelt</i> by Edmund Morris and
 				<i>The Defining Decade</i> by Meg Jay, PhD.
 				I recently finished
+				<i>Power Play</i> by Tim Higgins and 
 				<i>The Gurus, the Young Man, and Elder Paisios</i> by Alexis Trader.
 			</p>
 
 			<span style="font-style: italic; font-size: 0.8em">
-				last updated feb 2022
+				last updated july 2022
 			</span>
 		</div>
 
