made things pretty

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="style.css" rel="stylesheet">
+  <link href="dashboard.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,27 +35,25 @@ of your internship!</h2>
     <div id="container">
 
         <div class="column">
-            <p>
-            Days completed: <span id="totaldays"></span><br>
-            Days remaining: <span id="daysremaining"></span><br><br>
+        <p>Days completed: <span id="totaldays"></span></p>
+        <p>Days remaining: <span id="daysremaining"></span></p>
 
-            Total hours worked: <span id="hoursworked"></span><br>
-        </p>
+        <p>Total hours worked: <span id="hoursworked"></span></p>
+
         </div>
         <div class="column">
-            <p>
-            Weeks completed: <span id="totalweeks"></span><br>
-            Weeks remaining: <span id="weeksremaining"></span><br><br>
+          <p>Weeks completed: <span id="totalweeks"></span></p>
+          <p>Weeks remaining: <span id="weeksremaining"></span></p>
 
-            Total $$$ earned: <b>$</b><span id="earned"></span><br>
-            </p>
+          <p>Total $$$ earned: <b>$</b><span id="earned"></span></p>
+          
         </div>
     </div>
     <!--
     Progress bar for day<br>
     Progress bar for semester<br>
     -->
-  <script src="scripts.js"></script>
+  <script src="dashboard.js"></script>
 </body>
 
 </html>
