--- a/index.html
+++ b/index.html
@@ -72,14 +72,9 @@
 			</p>
 			<!-- professional qualifications-->
 			<p>
-				In 2022, I began working with <a href="https://www.solbid.com">SolBid, Inc</a>
-				as a Software Engineer Intern.
-				I've worked on projects ranging from
-				full-stack web development to machine learning and artificial intelligence (ML/AI).
-			</p>
-			<p>
-				This fall, I'll be working as a SDE Intern at 
-				<a href="https://www.aboutamazon.com/about-us">Amazon</a>.
+				In 2022, I worked with <a href="https://www.solbid.com">SolBid, Inc</a>
+				as a Software Engineer Intern. Now, I work as a SDE Intern at 
+				<a href="https://www.aboutamazon.com/about-us">Amazon</a>. I'm working on some cool data science projects that use AWS and machine learning.
 			</p>
 			<!-- fun personal details -->
 			<h2>Personal</h2>
