--- a/index.html
+++ b/index.html
@@ -86,15 +86,13 @@
 			</p>
 			<p>
 				Currently, I'm reading
-				<i>The Rise of Theodore Roosevelt</i> by Edmund Morris and
-				<i>The Defining Decade</i> by Meg Jay, PhD.
+				<i>The Lord of the Rings</i> series by J.R.R. Tolkien and
 				I recently finished
-				<i>Power Play</i> by Tim Higgins and 
-				<i>The Gurus, the Young Man, and Elder Paisios</i> by Alexis Trader.
+				<i>Power Play</i> by Tim Higgins and <i>The Defining Decade</i> by Meg Jay, PhD.
 			</p>
 
 			<span style="font-style: italic; font-size: 0.8em">
-				last updated july 2022
+				last updated oct 2022
 			</span>
 		</div>
 
