cleaned code and fixed nonworking hour bug

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -42,7 +42,7 @@ of your internship!</h2>
 
         </div>
         <div class="column">
-          <p>Weeks completed: <span id="totalweeks"></span></p>
+          <p>Weeks completed: <span id="totalweeks"></span>/13</p>
           <p>Weeks remaining: <span id="weeksremaining"></span></p>
 
           <p>Total $$$ earned: <b>$</b><span id="earned"></span></p>
