--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<p><i>
 				Wentworth Institute of Technology<br>
 				B.S. in Computer Science<br>
-				Expected Graduation: Aug. 2023<br>
+				Expected Graduation: Dec. 2023<br>
 				<a href="mailto:powellg@wit.edu">powellg@wit.edu</a>
 			</i></p>
 		</div>
@@ -61,7 +61,7 @@
 			<!-- introduction -->
 			<p>
 				Hi! My name is George. I'm a Computer Science student at
-				Wentworth Institute of Technology. I love using effective communication to solve problems.
+				Wentworth Institute of Technology, and an SDE Intern at Amazon.
 			</p>
 			<!-- significant personal achievements -->
 			<p>
@@ -74,7 +74,10 @@
 			<p>
 				In 2022, I worked with <a href="https://www.solbid.com">SolBid, Inc</a>
 				as a Software Engineer Intern. Now, I work as a SDE Intern at 
-				<a href="https://www.aboutamazon.com/about-us">Amazon</a>. I'm working on some cool data science projects that use AWS and machine learning.
+				<a href="https://www.aboutamazon.com/about-us">Amazon</a>. 
+				My interests lie in AI/ML, UI design, virtual ethics, 
+				fostering healthy digital relationships, 
+				and many other things that haven't been invented yet.
 			</p>
 			<!-- fun personal details -->
 			<h2>Personal</h2>
