--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -13,47 +13,42 @@
 
 <body>
 
-  <!-- Amazon Dashboard -->
-
-  <!-- 
-
-    Hi George- Welcome to week X, day Y of your internship
-
-    Days completed:         | Weeks completed: 
-    Days remaining:         | Weeks remaining: 
-
-    Total hours worked:     | Total $$$ earned
-
-    <Progress bar for day>
-    <Progress bar for semester>
-
-  -->
-
-  <h2>Hi George &mdash; Welcome to week <span id="currentweek">0</span>, day <span id="dayofweek">0</span>
+  <h2>Hi George &mdash; Welcome to week <span id="currentweek"></span>, day <span id="dayofweek"></span>
 of your internship!</h2>
 
-    <div id="container">
+    <div class="container">
 
         <div class="column">
         <p>Days completed: <span id="totaldays"></span></p>
         <p>Days remaining: <span id="daysremaining"></span></p>
 
-        <p>Total hours worked: <span id="hoursworked"></span></p>
+        <p>Total hours worked: <span id="hoursworked">n/a</span></p>
 
         </div>
         <div class="column">
           <p>Weeks completed: <span id="totalweeks"></span>/13</p>
           <p>Weeks remaining: <span id="weeksremaining"></span></p>
 
-          <p>Total $$$ earned: <b>$</b><span id="earned"></span></p>
+          <p>Total $$$ earned: <b>$</b><span id="earned">n/a</span></p>
           
         </div>
+    </div>
+
+    <div class="container">
+      <hr>
+
+      <p>Days left <span id="nano"></span></p>
+
     </div>
     <!--
     Progress bar for day<br>
     Progress bar for semester<br>
     -->
   <script src="dashboard.js"></script>
+  <script>
+  window.onload=nanowrimo();
+  window.onload=statistics();
+  </script>
 </body>
 
 </html>
