--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 	email <a href="mailto:powellg@wit.edu">powellg@wit.edu</a><br>
 	<!-- discord: <span style="background-color: #444444; color: white;" id="discord">george#4665</span><br> -->
 
-	also <a href="https://linkedin.com/in/georgehpowell" target="_blank">LinkedIn</a>, <a href="https://github.com/powellgatwit" target="_blank">GitHub</a><br>
+	also <a href="https://linkedin.com/in/georgehpowell" target="_blank">LinkedIn</a>, <a rel="me" href="https://fosstodon.org/web/@ghp" target="_blank">Mastodon</a><br>
 	<!--
 	<a href="https://www.chess.com/member/egglemonsoup" target="_blank">Chess.com</a><br>
 	<a href="https://lichess.org/@/powellgatwit" target="_blank">Lichess.org</a><br>
