may bio changes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<p><i>
 				Wentworth Institute of Technology<br>
 				B.S. in Computer Science<br>
-				Expected Graduation: Dec. 2023<br>
+				Expected Graduation: Aug. 2024<br>
 				<a href="mailto:powellg@wit.edu">powellg@wit.edu</a>
 			</i></p>
 		</div>
@@ -63,41 +63,43 @@
 			<!-- introduction -->
 			<p>
 				Hi! My name is George. I'm a Computer Science student at
-				Wentworth Institute of Technology, and an SDE Intern at Amazon.
+				Wentworth Institute of Technology, and a former SDE Intern at Amazon.
 			</p>
 			<!-- significant personal achievements -->
 			<p>
 				In 2018, I achieved the rank of Eagle Scout. Since then, I've volunteered with
 				<a href="http://ocf.net">Orthodox Christian Fellowship</a> on the Student Leadership Board,
 				worked as a barista at Starbucks, and restarted the Wentworth Chess Club,
-				in which I currently serve as president.
+				in which I served as president.
 			</p>
 			<!-- professional qualifications-->
 			<p>
-				In 2022, I worked with <a href="https://www.solbid.com">SolBid, Inc</a>
-				as a Software Engineer Intern. Now, I work as a SDE Intern at 
-				<a href="https://www.aboutamazon.com/about-us">Amazon</a>. 
-				My interests lie in AI/ML, UI design, virtual ethics, 
+				In 2022, I worked at SolBid, Inc
+				as a Software Engineer Intern, and at 
+				Amazon as a SDE Intern. 
+				My interests lie in storytelling, UI design, video games, 
 				fostering healthy digital relationships, 
 				and many other things that haven't been invented yet.
 			</p>
 			<!-- fun personal details -->
 			<h2>Personal</h2>
 			<p>
-				Reading allows me to pursue my desire for endless learning.
-				I enjoy reading about many topics, including
+				Reading is fun, but the addictive landscape of today's digital world has made it more difficult.
+				When I can, I enjoy reading about many topics, including
 				technology, digital anthropology, personal finance,
 				business, the environment, world history, psychology, and religion.
 			</p>
 			<p>
 				Currently, I'm reading
-				<i>The Lord of the Rings</i> series by J.R.R. Tolkien and
+				<i>The Lost City of Z</i> by David Grann and
+				<i>The Black Swan</i> by Nicholas Nassim Taleb.
 				I recently finished
-				<i>Power Play</i> by Tim Higgins and <i>The Defining Decade</i> by Meg Jay, PhD.
+				<i>Power Play</i> by Tim Higgins and 
+				<i>The Defining Decade</i> by Meg Jay, PhD.
 			</p>
 
 			<span style="font-style: italic; font-size: 0.8em">
-				last updated oct 2022
+				last updated may 18th, 2023
 			</span>
 		</div>
 
@@ -119,6 +121,7 @@
 	<!-- discord: <span style="background-color: #444444; color: white;" id="discord">george#4665</span><br> -->
 
 	also <a href="https://linkedin.com/in/georgehpowell" target="_blank">LinkedIn</a>, <a rel="me" href="https://fosstodon.org/web/@ghp" target="_blank">Mastodon</a><br>
+	and finally <a href="https://twitter.com/pupperpowell">twitter</a>
 	<!--
 	<a href="https://www.chess.com/member/egglemonsoup" target="_blank">Chess.com</a><br>
 	<a href="https://lichess.org/@/powellgatwit" target="_blank">Lichess.org</a><br>
